# msgpack23

./: .covdbg.yaml  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  conandata.yml  conanfile.py
.github/workflows/: cmake-multi-platform.yml
cmake/: msgpack23Config.cmake.in
examples/: CMakeLists.txt  first_example.cpp  second_example.cpp
include/msgpack23/: msgpack23.h
tests/: CMakeLists.txt  array_tests.cpp  bulk_write_tests.cpp  byte_type_tests.cpp  chrono_tests.cpp  dry_run_tests.cpp  exception_tests.cpp  int16_test.cpp  int16_tests.cpp  int32_test.cpp  int32_tests.cpp  int64_test.cpp  int64_tests.cpp  int8_test.cpp  int8_tests.cpp  main.cpp  map_tests.cpp  object_packing_tests.cpp  overall_test.cpp  span_tests.cpp  string_tests.cpp  type_packing_tests.cpp  type_tests.cpp  uint16_test.cpp  uint16_tests.cpp  uint32_test.cpp  uint32_tests.cpp  uint64_test.cpp  uint64_tests.cpp  uint8_test.cpp  uint8_tests.cpp
